--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,32 @@ nav a{
   width: 80px;
   height: 30px;
 }
+
+.section2 h2{
+  text-align: center;
+  font-size: 36px;
+  color: #1f2937;
+}
+
+.div-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 80px 150px;
+}
+
+.content{
+  width: 130px;
+  height: 130px;
+}
+.section-divs{
+  border: 2px solid #3882f6;
+  border-radius: 10px;
+  width: 130px;
+  height: 130px;
+}
+
+.content p{
+  text-align: center;
+  font-size: 16px;
+}
