--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
 body{
   margin: 0;
   font-family: "Times New Roman", Sans-Serif;
+  background-color: #1f2937;
 }
 
 header{
   background-color: #1f2937;
+  height: 3.5vh;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 header p{
@@ -34,7 +37,7 @@ nav a{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 500px;
+  height: 35vh;
 }
 .main h1{
   color: #f9faf8;
@@ -65,32 +68,106 @@ nav a{
   width: 80px;
   height: 30px;
 }
-
+.section2{
+  height: 25vh;
+  background-color: white;
+  margin: 0;
+}
 .section2 h2{
   text-align: center;
   font-size: 36px;
   color: #1f2937;
+  margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .div-container{
+  height: 70%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: 80px 150px;
 }
 
-.content{
-  width: 130px;
-  height: 130px;
-}
 .section-divs{
   border: 2px solid #3882f6;
   border-radius: 10px;
   width: 130px;
   height: 130px;
 }
-
+.content{
+  width: 130px;
+  width: 130px;
+}
 .content p{
+  margin-top: 5px;
   text-align: center;
-  font-size: 16px;
+  font-size: 14px;
+}
+
+.section3{
+  background-color: #e5e7eb;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+}
+.section3 div{
+  width: 800px;
+  height: auto;
+  margin: 0;
+}
+.section3 .p{
+  text-align: center;
+  font-size: 36px;
+  font-weight: 200;
+  color: #1f2937;
+  margin-bottom: 10px;
+}
+
+.p2{
+  text-align: end;
+  font-weight: 1000;
+  margin-bottom: 20px;
+}
+
+
+.section4{
+  background-color: #3882f6;
+  color: #f9faf8;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+  margin: 0;
+}
+
+.section4-span{
+  font-weight: 800;
+  font-size: 24px;
+}
+
+.section4 button{
+  background-color: transparent;
+  border: 2px solid #f9faf8;
+  width: 100px;
+  height: 50px;
+  border-radius: 10px;
+}
+
+.section4 button span{
+  font-size: 18px;
+  color: #f9faf8;
+}
+
+footer{
+  background-color: #1f2937;
+  margin: 0;
+  height: 3.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer p{
+  margin: 0;
+  color: #e5e7eb;
 }
